Bug 1653720 - Do not generate kFid ssrc-group if no msid is present; r=bwc

Chrome's SDP parser has problems with an ssrc-group being present if the media
section is inactive and does not have an msid.

Differential Revision: https://phabricator.services.mozilla.com/D85320